# knue-policy-vectorizer

./: .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DOCKER.md  Dockerfile  README.md  TODO.md  docker-compose.cron.yml  docker-compose.qdrant.yml  docker-compose.yml  migration_report_1755399253.json  pyproject.toml  requirements.txt
.agents/: AGENTS.md
.agents/00-foundations/: knue-overview.md
.agents/10-policies/: development-practices.md
.agents/20-workflows/: project-tracking.md  sync-operations.md
.agents/30-roles/: AGENTS.md
.agents/40-templates/: AGENTS.md
.agents/90-overrides/: AGENTS.md
.github/workflows/: ci.yml  daily-r2-sync.yml  daily-vector-sync.yml
.spec/: SPEC_INDEX.md
.spec/sync-pipeline/: project-roadmap.spec.md
.tasks/: TASKS_INDEX.md
.tasks/_archive/2025/Q4/: ARCHIVE_INDEX.md
.tasks/_archive/2025/Q4/cloudflare-r2-sync/: PROGRESS.md  SPEC-DELTA.md
.tasks/_archive/2025/Q4/refactor-src-folder/: PLAN.md  RESEARCH.md  SPEC-DELTA.md
.tasks/cloudflare-r2-sync/: PLAN.md  RESEARCH.md
.tasks/refactor-src-folder/: PROGRESS.md
.tasks/remove-env-export-feature/: PLAN.md  PROGRESS.md  RESEARCH.md  SPEC-DELTA.md
config/: qdrant.yml
config/secrets/: .key
config/templates/: local-development.json  openai-cloud.json  openai-local.json  production-high-performance.json
docs/: PR_2_3_PROPOSALS.md
scripts/: crontab  test_docker_environment.py  test_embedding_integration.py  test_full_sync_pipeline.py  test_git_watcher.py  test_qdrant_integration.py  verify_qdrant.py
src/: __init__.py  cloudflare_r2_service.py  config.py  config_manager.py  crypto_utils.py  embedding_service.py  embedding_service_openai.py  git_watcher.py  knue_board_ingestor.py  logger.py  markdown_processor.py  migration_tools.py  providers.py  qdrant_service.py  qdrant_service_cloud.py  r2_sync_pipeline.py  sync_pipeline.py
src/config/: config.py  config_manager.py
src/core/: git_watcher.py  migration_tools.py
src/pipelines/: r2_sync_pipeline.py  sync_pipeline.py
src/services/: cloudflare_r2_service.py  embedding_service_openai.py  knue_board_ingestor.py  qdrant_service.py  qdrant_service_cloud.py
src/utils/: logger.py  markdown_processor.py  providers.py
test_data/markdown_samples/: 정책1_학사관리.md
tests/: TEST_REVIEW.md  test_cli_providers.py  test_cloudflare_r2_service.py  test_config_env.py  test_config_multi_provider.py  test_crypto_utils.py  test_document_chunking.py  test_embedding_service.py  test_embedding_service_openai.py  test_git_watcher.py  test_html_cleaning.py  test_knue_board_ingestor.py  test_markdown_processor.py  test_migration_tools.py  test_providers.py  test_qdrant_connection.py  test_qdrant_service.py  test_qdrant_service_cloud.py  test_r2_sync_pipeline.py  test_security_cleartext.py  test_setup.py  test_sync_pipeline.py
tests/config/: test_config_env.py  test_config_multi_provider.py  test_security_cleartext.py
tests/core/: test_git_watcher.py  test_migration_tools.py
tests/fixtures/samples/: 정책2_장학금.md  정책3_기숙사.md
tests/pipelines/: test_cli_providers.py  test_r2_sync_pipeline.py  test_sync_pipeline.py
tests/services/: test_cloudflare_r2_service.py  test_embedding_service_openai.py  test_knue_board_ingestor.py  test_qdrant_service.py  test_qdrant_service_cloud.py
tests/utils/: test_crypto_utils.py  test_document_chunking.py  test_html_cleaning.py  test_markdown_processor.py  test_providers.py
